[package]
name = "ntutils"
version = "0.1.0"
edition = "2021"
description = "Number theory utilities"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crypto-bigint = "0.5.5"
anyhow = "1.0.83"
num = { version = "0.4.2", features = ["std"] }
num-prime = "0.4.4"
rand = "0.8.5"
